add node server to project for heroku

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "fe-app"
+    }
+  },
+  "defaultProject": "fe-app",
+  "cli": {
+    "analytics": false
+  }
 }
