--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~10.0.5",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.4",
